# fni

./: .bazelrc  .clang-format  .clangd  .gitignore  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  compile_flags.txt
dni/: BUILD
dni/dni-py/: README.md
dni/dni-py/api/: __init__.py
dni/framework/: BUILD  collection.h  context.h  context_manager.cc  context_manager.h  datum.cc  datum.h  datum_type.h  default_input_stream_handler.cc  default_input_stream_handler.h  dni.proto  dtype.h  framework.h  graph.cc  graph.h  graph_config.cc  graph_config.h  graph_output_stream.cc  graph_output_stream.h  input_side_data.cc  input_side_data.h  input_stream.cc  input_stream.h  input_stream_handler.cc  input_stream_handler.h  input_stream_manager.cc  input_stream_manager.h  node.cc  node.h  node_config.cc  node_config.h  output_side_data.cc  output_side_data.h  output_stream.cc  output_stream.h  output_stream_handler.cc  output_stream_handler.h  output_stream_manager.cc  output_stream_manager.h  stream_handler.proto  (+9 more)
dni/framework/formats/: BUILD  cidr.cc  cidr.h
dni/framework/utils/: BUILD  names.cc  names.h  proto.h  tags.cc  tags.h
dni/go/: README-zh.md  go.mod  go.sum  path_env.sh
dni/go/test/: config_test.go  dms_data_test.go  dms_task_test.go  flowmng_test.go  sdk_test.go  snding_test.go  utils_test.go
dni/python/: __init__.py  main.py
dni/python/conf/: __init__.py
dni/python/scripts/: __init__.py
dni/tasks/core/: BUILD  (+10 more)
examples/bazel_python/: BUILD  dni.py  test_case1.py
examples/taskflow_async/: BUILD  async.cpp
examples/taskflow_composing/: BUILD  composing.cpp
examples/taskflow_control_flow/: BUILD
examples/taskflow_executing/: BUILD  executing.cpp
examples/taskflow_parallelism/: BUILD  parallelism.cpp
examples/taskflow_simple/: BUILD
examples/taskflow_static_tasking/: BUILD
examples/taskflow_subgraph/: BUILD
samples/: variables.bzl
samples/bazel/: BUILD
samples/ddos/: BUILD  attack_tracing.cc
samples/dni_grpc/: BUILD
samples/grpc/: BUILD
samples/kubeflow/: kfp_container_hello.py  kfp_hello.py  pipeline_container_hello.yaml  pipeline_hello.yaml
samples/onnx/: BUILD  DNIDynamicModelLoader.cc  DNIDynamicModelLoader.h  DNIDynamicModelLoaderTest_BPNet_Iris.cc  DNIDynamicModelLoaderTest_LogReg_Iris.cc  DNIFixedModelLoader.cc  DNIFixedModelLoader.h  DNIFixedModelLoaderTest_LogReg_Iris.cc  DNIFixedModelLoaderTest_MatMul_Add.cc  DNIFixedModelLoaderTest_MatMul_MatMul.cc  DNIFixedModelLoaderTest_Multi_Add.cc  DNIModelLoader.cc  DNIModelLoader.h  DNIModelLoaderTest.cc  bpnet_iris.onnx  model_2_5_x_2_5_v19.onnx
samples/pbtxt2taskflow/: BUILD  pbtxt2taskflow.cc  pbtxt2taskflow.pbtxt
samples/pipeline/: BUILD  counter.cc  pipeline.h  simple.cc
samples/poc/: BUILD  counter.cc  influxdb_client.cc  nop.cc  pbtxt2taskflow.cc
samples/register/: BUILD  addone_task.cc  addormul_task.cc  counter.cc  counter.pbtxt  counter_task.cc  parallel_calc.cc  subordiv_task.cc  two_way_counter_opposite_task.cc  two_way_counter_task.cc  two_way_counter_with_calc.cc  two_way_counter_with_calc.pbtxt
samples/ringbuffer/: BUILD
samples/sidedata/: BUILD  add_input_sidedata_task.cc  input_sidedata.cc  process_sidedata.cc  process_sidedata_task.cc  sidedata_output_task.cc  sidedata_test1.cc
samples/snding/: BUILD  anomaly_detection.cc  attacker_ip_merge.cc  cidr_merge.cc  cidr_merge_task.cc  cidr_merge_test_digital_format.cc  cidr_merge_test_string_format.cc  cond_threshold.cc  cond_threshold_task.cc  counter.cc  counter_task.cc  dms_rules_1.cc  dms_rules_2.cc  dms_rules_3.cc  dms_rules_dedup_1.cc  dms_rules_dedup_2.cc  dms_rules_dedup_3.cc  dms_rules_test.cc  feature_counter.cc  feature_counter_task.cc  jsoncpp_test.cc  max_number.cc  max_number_task.cc  net_record_merge.cc  net_record_merge_task.cc  number_stats.cc  number_stats_task.cc  pcap_parse.cc  pcap_parse_task.cc  protocol_stats.cc  protocol_stats_task.cc  sip_base_merge.cc  sip_base_merge_dedup.cc  sip_base_merge_task.cc  snding_defines.h  snding_utils.cc  snding_utils.h  sum.cc  sum_task.cc  threshold.cc  (+1 more)
samples/taskflow/: BUILD  async.cc  basic.cc  basic.cpp  composing.cc  conditional_tasking.cc  control_flow.cc  custom_graph.cc  executing.cc  looping.cc  parallelism.cc  pipeline.cc  runtime_corun.cc  runtime_executor.cc  runtime_scheduling.cc  static_tasking.cc  subflow.cc  subflow_detaching.cc  subflow_joining.cc  subgraph.cc
samples/tools/: BUILD  datumgen.h
(+553 files in other folders)
