"Dependencies for DNI"

module(
    name = "dni",
    version = "0.9.9",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")

bazel_dep(name = "zlib", version = "1.3")

bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")

bazel_dep(name = "jsoncpp", version = "1.9.5")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.9.0")

bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

bazel_dep(name = "grpc", version = "1.56.3", repo_name = "com_github_grpc_grpc")

# NOTE: "io_bazel_rules_go" (the exact symbol) is required by grpc_extra_deps() which
# claims to be necessary for using the external repositories defined in grpc_deps.bzl, but
# we find it not necessary. Consider remove it completely when grpc fully supports bzlmod.
#
# bazel_dep(name = "rules_go", version = "0.46.0", repo_name = "io_bazel_rules_go")

bazel_dep(name = "spdlog", version = "1.13.0")

# Dependencies from devs

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
)
