load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")

grpc_deps()

# load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")

# grpc_extra_deps()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "fmtlib",
    build_file = "@//third_party:fmtlib.BUILD",
    sha256 = "1250e4cc58bf06ee631567523f48848dc4596133e163f02615c97f78bab6c811",
    strip_prefix = "fmt-10.2.1",
    url = "https://github.com/fmtlib/fmt/archive/refs/tags/10.2.1.tar.gz",
)

http_archive(
    name = "taskflow",
    build_file = "@//third_party:taskflow.BUILD",
    sha256 = "5a1cd9cf89f93a97fcace58fd73ed2fc8ee2053bcb43e047acb6bc121c3edf4c",
    strip_prefix = "taskflow-3.6.0",
    url = "https://github.com/taskflow/taskflow/archive/refs/tags/v3.6.0.tar.gz",
)

http_archive(
    name = "onnxruntime_macos_arm64",
    build_file = "@//third_party:onnxruntime_macos.BUILD",
    sha256 = "89566f424624a7ad9a7d9d5e413c44b9639a994d7171cf409901d125b16e2bb3",
    strip_prefix = "onnxruntime-osx-arm64-1.17.1",
    url = "https://github.com/microsoft/onnxruntime/releases/download/v1.17.1/onnxruntime-osx-arm64-1.17.1.tgz",
)

http_archive(
    name = "onnxruntime_macos_x86_64",
    build_file = "@//third_party:onnxruntime_macos.BUILD",
    sha256 = "86c6b6896434084ff5086eebc4e9ea90be1ed4d46743f92864f46ee43e7b5059",
    strip_prefix = "onnxruntime-osx-x86_64-1.17.1",
    url = "https://github.com/microsoft/onnxruntime/releases/download/v1.17.1/onnxruntime-osx-x86_64-1.17.1.tgz",
)

http_archive(
    name = "onnxruntime_linux_x64",
    build_file = "@//third_party:onnxruntime_linux.BUILD",
    sha256 = "89b153af88746665909c758a06797175ae366280cbf25502c41eb5955f9a555e",
    strip_prefix = "onnxruntime-linux-x64-1.17.1",
    url = "https://github.com/microsoft/onnxruntime/releases/download/v1.17.1/onnxruntime-linux-x64-1.17.1.tgz",
)

http_archive(
    name = "cpr",
    build_file = "@//third_party:cpr.BUILD",
    sha256 = "c8590568996cea918d7cf7ec6845d954b9b95ab2c4980b365f582a665dea08d8",
    strip_prefix = "cpr-1.10.5",
    url = "https://github.com/libcpr/cpr/archive/refs/tags/1.10.5.tar.gz",
)

http_archive(
    name = "influxdb-cxx",
    build_file = "@//third_party:influxdb_cxx.BUILD",
    sha256 = "951e067df5731cb23b72f53fcbea8e56920819c6191b6885ea180168eb1950d9",
    strip_prefix = "influxdb-cxx-0.7.2",
    url = "https://github.com/offa/influxdb-cxx/archive/refs/tags/v0.7.2.tar.gz",
)

# dependencies from local repositories

new_local_repository(
    name = "libpcap_linux",
    build_file = "@//third_party:libpcap_linux.BUILD",
    path = "/usr",
)

new_local_repository(
    name = "libpcap_macos_x86_64",
    build_file = "@//third_party:libpcap_macos.BUILD",
    path = "/usr/local/opt/libpcap",
)

new_local_repository(
    name = "libpcap_macos_arm64",
    build_file = "@//third_party:libpcap_macos.BUILD",
    path = "/opt/homebrew/opt/libpcap",
)
